Mon May 23 21:09:06 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (Init_openssl): Avoid reference to unset global
	  variable. ossl_raise() may be called before dOSSL is set. Since
	  global variables default to 0 and the default value of dOSSL set in
	  Init_openssl() is also Qfalse, there is no real issue but confusing.
	  Patch by Bertram Scharpf <software@bertram-scharpf.de>
	  [ruby-core:58264] [Bug #9101]

Mon May 23 20:32:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c, ext/openssl/ossl_bn.c,
	  ext/openssl/ossl_cipher.c, ext/openssl/ossl_digest.c
	  ext/openssl/ossl_engine.c, ext/openssl/ossl_ns_spki.c
	  ext/openssl/ossl_pkcs12.c, ext/openssl/ossl_pkcs7.c
	  ext/openssl/ossl_pkey.c, ext/openssl/ossl_pkey_ec.c
	  ext/openssl/ossl_rand.c, ext/openssl/ossl_ssl.c
	  ext/openssl/ossl_x509attr.c, ext/openssl/ossl_x509cert.c
	  ext/openssl/ossl_x509ext.c, ext/openssl/ossl_x509store.c: Use
	  StringValueCStr() where NUL-terminated string is expected.

Mon May 23 20:20:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (isfinite): get rid of a warning on
	  cygwin. [Bug #12417][ruby-core:75691]

Mon May 23 19:41:27 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_rand.c (ossl_rand_egd, ossl_rand_egd_bytes):
	  RAND_egd{_bytes,}() return -1 on failure, not 0.
	  Patch by cremno phobia <cremno@mail.ru>
	  [ruby-core:63795] [Bug #10053]
	  (ossl_pseudo_bytes): Similar, RAND_pseudo_bytes() may return 0 or
	  -1 on failure.

Mon May 23 15:52:07 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (isfinite): isfinite does not always
	  exist.  fixed build error on Windows introduced at r55123.

Mon May 23 13:19:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args0): make compile error if the
	  format is wrong or does not match with the variable argument
	  length if possible.

Mon May 23 12:47:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
