@@ -1,3 +1,7 @@
+Mon May 23 21:33:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/missing.h (isfinite): move from numeric.c.
+
 Mon May 23 21:09:06 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* ext/openssl/ossl.c (Init_openssl): Avoid reference to unset global
